# disassembler

./: Cargo.toml  README.md  \
src/: decode.rs  input.rs  instruction.rs  main.rs  opcodes.rs  output.rs
src/tests/: compendium.s  example1.out  example1.s  file2.out  file2.s  instruction.rs  mod.rs
src/tests/files/: assembly.s  file2.out  file2.s
