[package]
name        = "disassembler"
version     = "0.1.0"
edition     = "2024"
author      = "Chuck Norris"
description = "A simple disassembler for EN.695.744"

[dependencies]
serde = { version = "1.0.219", features = [ "derive" ] }
clap  = { version = "4.5.47" }
phf   = { version = "0.13.1", features = ["macros"] }
bon   = { version = "3.7.2" }
